--- a/appmanifest.json
+++ b/appmanifest.json
@@ -1,6 +1,6 @@
 ﻿{
-	"name": "Final 593070287-7",
-	"short_name": "Final 593070287-7",
+	"name": "Rabies",
+	"short_name": "Rabies",
 	"start_url": "index.html",
 	"display": "fullscreen",
 	"orientation": "any",
